--- a/hotel-reservation-system-backend/src/main/resources/application.properties
+++ b/hotel-reservation-system-backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=HotelReservationSystem
+server.port=3000
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel-bd?serverTimezone=America/Argentina/Jujuy
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+
