--- a/hotel-reservation-system-backend/src/main/resources/application.properties
+++ b/hotel-reservation-system-backend/src/main/resources/application.properties
@@ -1,23 +1,19 @@
 spring.application.name=HotelReservationSystem
 server.port=3000
 
+spring.datasource.driver-class-name=org.postgresql.Driver
 # URL de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel-bd?serverTimezone=America/Argentina/Jujuy
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel-bd
 
 # Credenciales de la base de datos
 spring.datasource.username=root
 spring.datasource.password=root
 
-# Configuración JPA/Hibernate
+# Configuracion JPA/Hibernate ORM
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Configuración del pool de conexiones (opcional)
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.maximum-pool-size=10
-
-spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-#app.jwtSecret=YourSecretKey
-#app.jwtExpirationInMs=3600000
