--- a/hotel-reservation-system-backend/src/main/resources/application.properties
+++ b/hotel-reservation-system-backend/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Loggers
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
