primeras apis get-hotel funcionando

--- a/hotel-reservation-system-backend/src/main/resources/application.properties
+++ b/hotel-reservation-system-backend/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.password=root
 # Configuracion JPA/Hibernate ORM
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 # Loggers
 logging.level.org.springframework=DEBUG
