--- a/hotel-reservation-system-backend/pom.xml
+++ b/hotel-reservation-system-backend/pom.xml
@@ -87,6 +87,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.mercadopago</groupId>
+		    <artifactId>sdk-java</artifactId>
+		    <version>2.0.0</version> <!-- Verifica la última versión -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
